# ToDo

./: CMakeLists.txt  LICENSE  main.cpp  window.cpp  window.h
resources/: icons.qrc
src/: main.cpp
src/common/: commondatatypes.h
src/core/database/: database.h
src/core/database/database/: idatabase.h
src/ui/cstackedwidget/: cstackedwidget.cpp  cstackedwidget.h
src/ui/taskcard/: taskcard.cpp  taskcard.h  taskcard.ui
src/ui/utils/: utils.cpp  utils.h
src/ui/window/: window.cpp  window.h  window.ui
ui/: window.ui
